--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
             width: 17%;
         }
 
+        @media (max-width: 768px) {
+            #imagePreviewContainer {
+                width: 100%;
+            }
+        }
         #imagePreview {
             width: 300px;
             height: auto;
