--- a/produk.html
+++ b/produk.html
@@ -194,7 +194,7 @@
             formData.append('image1', document.getElementById('image1').files[0]);
             formData.append('image2', document.getElementById('image2').files[0]);
 
-            fetch('https://b093-2001-448a-2098-588b-8841-7491-9f0-2452.ngrok-free.apps/compare', {
+            fetch('https://b093-2001-448a-2098-588b-8841-7491-9f0-2452.ngrok-free.app/compare', {
                 method: 'POST',
                 body: formData
             })
