--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         }
     </style>
 </head>
+<script src="script.js"></script>
 <body>
     <!-- Navbar with two menu items -->
     <div class="navbar">
@@ -252,7 +253,7 @@
 
             try {
                 // Send the form data to the server using fetch
-                const response = await fetch('https://9a46-2001-448a-2098-588b-6474-1836-e421-f55e.ngrok-free.app/upload', {
+                const response = await fetch(baseUrl+'/upload', {
                     method: 'POST',
                     body: formData
                 });
